@@ -109,6 +109,113 @@ static void xmlSetPitch(Note* n, char step, int alter, int octave, Ottava* ottav
       n->setTpc(tpc);
       }
 
+
+//---------------------------------------------------------
+//   stringToInt
+//---------------------------------------------------------
+
+/**
+ Convert a string in \a s into an int. Set *res to true iff conversion was
+ successful. \a s may end with ".0", as is generated by Audiveris 3.2 and up,
+ in elements <divisions>, <duration>, <alter> and <sound> attributes
+ dynamics and tempo.
+ In case of error val return a default value of 0. A negative number is an error.
+ Note that non-integer values cannot be handled by mscore.
+ */
+
+static int stringToInt(const QString& s, bool* ok)
+      {
+      int res = 0;
+      QString str = s;
+      if (s.endsWith(".0"))
+            str = s.left(s.size() - 2);
+      res = str.toInt(ok);
+      return res;
+      }
+
+
+//---------------------------------------------------------
+//   calcTicks
+//---------------------------------------------------------
+
+static int calcTicks(QString text, int divisions)
+      {
+      bool ok;
+      int val = stringToInt(text, &ok);
+      if (!ok) {
+            printf("MusicXml-Import: bad duration value: <%s>\n",
+                  qPrintable(text));
+            }
+      if (val == 0)     // neuratron scanner produces sometimes 0 !?
+            val = 1;
+      val = val * AL::division / divisions;
+      return val;
+      }
+
+
+//---------------------------------------------------------
+//   moveTick
+//---------------------------------------------------------
+
+/**
+ Move tick by amount specified in the element e, which must be
+ a forward, backup or note.
+ */
+
+static void moveTick(int& tick, int& maxtick, int& lastLen, int divisions, QDomElement e)
+      {
+      if (e.tagName() == "forward") {
+            for (QDomElement ee = e.firstChildElement(); !ee.isNull(); ee = ee.nextSiblingElement()) {
+                  if (ee.tagName() == "duration") {
+                        int val = calcTicks(ee.text(), divisions);
+                        printf("forward %d\n", val);
+                        tick += val;
+                        if (tick > maxtick)
+                              maxtick = tick;
+                        lastLen = val;    // ?
+                        }
+                  else if (ee.tagName() == "voice")
+                        ;
+                  else if (ee.tagName() == "staff")
+                        ;
+                  else
+                        domError(ee);
+                  }
+            }
+      else if (e.tagName() == "backup") {
+            for (QDomElement ee = e.firstChildElement(); !ee.isNull(); ee = ee.nextSiblingElement()) {
+                  if (ee.tagName() == "duration") {
+                        int val = calcTicks(ee.text(), divisions);
+                        printf("backup %d\n", val);
+                        tick -= val;
+                        lastLen = val;    // ?
+                        }
+                  else
+                        domError(ee);
+                  }
+            }
+      else if (e.tagName() == "note") {
+            bool grace   = false;
+            int ticks = 0;
+            for (QDomElement ee = e.firstChildElement(); !ee.isNull(); ee = ee.nextSiblingElement()) {
+                  QString tag(ee.tagName());
+                  if (tag == "grace") {
+                        grace = true;
+                        }
+                  else if (tag == "duration") {
+                        ticks = calcTicks(ee.text(), divisions);
+                        }
+                  }
+            if (!grace) {
+                  lastLen = ticks; // ?
+                  tick += ticks;
+                  if (tick > maxtick)
+                        maxtick = tick;
+                  }
+            }
+      }
+
+
 //---------------------------------------------------------
 //   MusicXml
 //---------------------------------------------------------
@@ -505,6 +612,69 @@ void MusicXml::doCredits()
       }
 
 //---------------------------------------------------------
+//   determineMeasureLength
+//---------------------------------------------------------
+
+/**
+ Determine the length in ticks of each measure in part e
+ */
+
+static void determineMeasureLength(QDomElement e)
+      {
+      int divisions = 0;
+      int tick = 0;
+      int maxtick = 0;
+      int prevmaxtick = 0;
+      int lastLen = 0;
+      int measureNr = 0;
+      for (e = e.firstChildElement(); !e.isNull(); e = e.nextSiblingElement()) {
+            if (e.tagName() == "measure") {
+                  for (QDomElement ee = e.firstChildElement(); !ee.isNull(); ee = ee.nextSiblingElement()) {
+                        if (ee.tagName() == "attributes") {
+                              for (QDomElement eee = ee.firstChildElement(); !eee.isNull(); eee = eee.nextSiblingElement()) {
+                                    if (eee.tagName() == "divisions") {
+                                          bool ok;
+                                          divisions = stringToInt(eee.text(), &ok);
+                                          if (!ok) {
+                                                printf("MusicXml-Import: bad divisions value: <%s>\n",
+                                                   qPrintable(eee.text()));
+                                                      divisions = 4;
+                                                }
+                                          printf("measurelength divisions %d\n", divisions);
+                                          }
+                                    }
+                              }
+                        else if (ee.tagName() == "note") {
+                              bool chord = false;
+                              bool grace = false;
+                              for (QDomElement eee = ee.firstChildElement(); !eee.isNull(); eee = eee.nextSiblingElement()) {
+                                    if (eee.tagName() == "chord") {
+                                          chord = true;
+                                          }
+                                    else if (eee.tagName() == "grace") {
+                                          grace = true;
+                                          }
+                                    }
+                              if (chord && !grace)
+                                    tick -= lastLen;
+                              moveTick(tick, maxtick, lastLen, divisions, ee);
+                              }
+                        else if (ee.tagName() == "backup") {
+                              moveTick(tick, maxtick, lastLen, divisions, ee);
+                              }
+                        else if (ee.tagName() == "forward") {
+                              moveTick(tick, maxtick, lastLen, divisions, ee);
+                              }
+                        }
+                  printf("measurelength measure %d tick %d maxtick %d delta %d\n",
+                         measureNr + 1, tick, maxtick, maxtick - prevmaxtick);
+                  prevmaxtick = maxtick;
+                  measureNr++;
+                  }
+            }
+      }
+
+//---------------------------------------------------------
 //   scorePartwise
 //---------------------------------------------------------
 
@@ -517,6 +687,7 @@ void MusicXml::scorePartwise(QDomElement ee)
       // In a first pass collect all Parts in case the part-list does not
       // list them all. Incomplete part-list's are generated by some versions
       // of finale
+      // Furthermore, determine the length in ticks of each measure in the part
 
       for (QDomElement e = ee; !e.isNull(); e = e.nextSiblingElement()) {
             if (e.tagName() == "part") {
@@ -527,6 +698,8 @@ void MusicXml::scorePartwise(QDomElement ee)
                   Staff* staff = new Staff(score, part, 0);
                   part->staves()->push_back(staff);
                   score->staves().push_back(staff);
+                  printf("measurelength part %s\n", qPrintable(id));
+                  determineMeasureLength(e);
                   }
             }
       for (QDomElement e = ee; !e.isNull(); e = e.nextSiblingElement()) {
@@ -1081,110 +1254,6 @@ void MusicXml::xmlPart(QDomElement e, QString id)
                   }
             else
                   domError(e);
-            }
-      }
-
-//---------------------------------------------------------
-//   stringToInt
-//---------------------------------------------------------
-
-/**
- Convert a string in \a s into an int. Set *res to true iff conversion was
- successful. \a s may end with ".0", as is generated by Audiveris 3.2 and up,
- in elements <divisions>, <duration>, <alter> and <sound> attributes
- dynamics and tempo.
- In case of error val return a default value of 0. A negative number is an error.
- Note that non-integer values cannot be handled by mscore.
- */
-
-static int stringToInt(const QString& s, bool* ok)
-      {
-      int res = 0;
-      QString str = s;
-      if (s.endsWith(".0"))
-            str = s.left(s.size() - 2);
-      res = str.toInt(ok);
-      return res;
-      }
-
-
-//---------------------------------------------------------
-//   calcTicks
-//---------------------------------------------------------
-
-static int calcTicks(QString text, int divisions)
-      {
-      bool ok;
-      int val = stringToInt(text, &ok);
-      if (!ok) {
-            printf("MusicXml-Import: bad duration value: <%s>\n",
-                  qPrintable(text));
-            }
-      if (val == 0)     // neuratron scanner produces sometimes 0 !?
-            val = 1;
-      val = val * AL::division / divisions;
-      return val;
-      }
-
-//---------------------------------------------------------
-//   moveTick
-//---------------------------------------------------------
-
-/**
- Move tick by amount specified in the element e, which must be
- a forward, backup or note.
- */
-
-static void moveTick(int& tick, int& maxtick, int& lastLen, int divisions, QDomElement e)
-      {
-      if (e.tagName() == "forward") {
-            for (QDomElement ee = e.firstChildElement(); !ee.isNull(); ee = ee.nextSiblingElement()) {
-                  if (ee.tagName() == "duration") {
-                        int val = calcTicks(ee.text(), divisions);
-                        printf("forward %d\n", val);
-                        tick += val;
-                        if (tick > maxtick)
-                              maxtick = tick;
-                        lastLen = val;    // ?
-                        }
-                  else if (ee.tagName() == "voice")
-                        ;
-                  else if (ee.tagName() == "staff")
-                        ;
-                  else
-                        domError(ee);
-                  }
-            }
-      else if (e.tagName() == "backup") {
-            for (QDomElement ee = e.firstChildElement(); !ee.isNull(); ee = ee.nextSiblingElement()) {
-                  if (ee.tagName() == "duration") {
-                        int val = calcTicks(ee.text(), divisions);
-                        printf("backup %d\n", val);
-                        tick -= val;
-                        lastLen = val;    // ?
-                        }
-                  else
-                        domError(ee);
-                  }
-            }
-      else if (e.tagName() == "note") {
-            bool grace   = false;
-            int ticks = 0;
-            for (QDomElement ee = e.firstChildElement(); !ee.isNull(); ee = ee.nextSiblingElement()) {
-                  QString tag(ee.tagName());
-                  if (tag == "grace") {
-                        grace = true;
-                        }
-                  else if (tag == "duration") {
-                        ticks = calcTicks(ee.text(), divisions);
-                        }
-                  }
-            if (!grace) {
-                  lastLen = ticks; // ?
-                  tick += ticks;
-                  if (tick > maxtick)
-                        maxtick = tick;
-                  }
             }
       }
 
